; ModuleID = '/home/carl/AnghaBench/git/extr_line-log.c_line_log_data_clear.c'
source_filename = "/home/carl/AnghaBench/git/extr_line-log.c_line_log_data_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.line_log_data = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.line_log_data*)* @line_log_data_clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @line_log_data_clear(%struct.line_log_data* %0) #0 {
  %2 = alloca %struct.line_log_data*, align 8
  store %struct.line_log_data* %0, %struct.line_log_data** %2, align 8
  %3 = load %struct.line_log_data*, %struct.line_log_data** %2, align 8
  %4 = getelementptr inbounds %struct.line_log_data, %struct.line_log_data* %3, i32 0, i32 1
  %5 = call i32 @range_set_release(i32* %4)
  %6 = load %struct.line_log_data*, %struct.line_log_data** %2, align 8
  %7 = getelementptr inbounds %struct.line_log_data, %struct.line_log_data* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.line_log_data*, %struct.line_log_data** %2, align 8
  %12 = getelementptr inbounds %struct.line_log_data, %struct.line_log_data* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = call i32 @diff_free_filepair(i64 %13)
  br label %15

15:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @range_set_release(i32*) #1

declare dso_local i32 @diff_free_filepair(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
